@@ -6,13 +6,19 @@
 
 \description{Plot TDR temperature-depth recorder data}
 
-\usage{\method{plot}{tdr}(x, which=1:4, \dots)}
+\usage{\method{plot}{tdr}(x, which=1:4, adorn=NULL, \dots)}
 
 \arguments{
   \item{x}{\code{cdt} object, typically result of \code{\link{read.tdr}}.}
   \item{which}{if a subset of the plots is required, specify a subset of
     the numbers 1:4.  These are codes for the panels, which will be
     drawn from top-left to bottom-right (see Details).}
+  \item{adorn}{list of character strings containing commands to be
+    executed for the panels.  If the number matches the number of
+    panels, then the strings are applied to the appropriate panels, as
+    they are drawn from top-left to bottom-right.   If only a single
+    string is provided, it is used for all panels.  (See
+    \dQuote{Examples}.)}
   \item{\dots}{optional arguments passed to plotting functions.}
 }
 
@@ -23,6 +29,11 @@
   and
   \code{which}=4 for a scatterplot of the temperature profile, .  You
   may supply a list of \code{which} values, to get multi-panel plots.}
+
+\examples{
+data(tdr)
+plot(tdr, which=c(1,3), adorn="abline(v=as.POSIXct('2008-07-04 20:00:00',tz='UTC'),col='red')")
+}
 
 \seealso{See \code{\link{read.tdr}} for more information on dealing
   with the \code{tdr} data type, including examples.}
